--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,6 +34,8 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.commons-fileupload-1.3.1.jar=C:\\bibliotecas\\commons-fileupload-1.3.1.jar
+file.reference.commons-io-2.4.jar=C:\\bibliotecas\\commons-io-2.4.jar
 file.reference.mysql-connector-java-8.0.23.jar=C:\\bibliotecas\\mysql-connector-java-8.0.23.jar
 file.reference.postgresql-42.2.19.jar=C:\\bibliotecas\\postgresql-42.2.19.jar
 includes=**
@@ -51,7 +53,9 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.23.jar}:\
-    ${file.reference.postgresql-42.2.19.jar}
+    ${file.reference.postgresql-42.2.19.jar}:\
+    ${file.reference.commons-fileupload-1.3.1.jar}:\
+    ${file.reference.commons-io-2.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
